fixed overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -230,7 +230,7 @@ nav {
   align-items: center;
   width: 100%;
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: hidden;
 
   
   .heroLeft {
@@ -535,7 +535,7 @@ nav {
 .testimonials {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
   position: relative;
   margin-bottom: 100px;
@@ -558,7 +558,7 @@ nav {
     overflow-x: auto;
     max-width: 100%;
     // background-color: red;
-    scroll-snap-type: x mandatory;
+    // scroll-snap-type: x mandatory;
     justify-content: flex-start;
     align-self: flex-start;
 
@@ -571,7 +571,7 @@ nav {
       width: 100%;
       box-sizing: border-box;
       padding-left: 20px;
-      scroll-snap-align: start;
+      // scroll-snap-align: start;
       
 
       .larger-text {
